--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
                             <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
                                 <h3 class="card-title">CSS Creature</h3>
                             </a>
-                            <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.
-                                This content is a little bit longer.</p> -->
+                            <p class="card-text">Animated bunny created using HTML and CSS.</p>
                         </div>
 
                     </div>
@@ -157,7 +156,7 @@
                             <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
                                 <h3>Storefront</h3>
                             </a>
-                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                            <p class="card-text">Static mobile-responsive webpage designed with HTML, CSS, and Bootstrap.</p>
                         </div>
 
                     </div>
@@ -173,7 +172,7 @@
                             <a href="https://star-wars-api-project.firebaseapp.com" target="blank" style="color: green">
                                 <h3>API Project</h3>
                             </a>
-                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                            <p class="card-text">JavaScript app that fetches data from the Star Wars API (swapi.com) to display the opening scroll of each Star Wars movie. Styled with HTML and CSS.</p>
                         </div>
 
                     </div>
@@ -189,7 +188,7 @@
                             <a href="https://tdesserich-healthtrackerclient.herokuapp.com/" target="blank" style="color: green">
                                 <h3>Medical Tracker</h3>
                             </a>
-                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                            <p class="card-text">Full stack application built using Node.js and React. Has full create, read, update and delete functionality. Mobile responsive. Styled with CSS and Reactstrap.</p>
                         </div>
 
                     </div>
@@ -204,7 +203,7 @@
                             <a href="https://github.com/tdesserich" target="blank" style="color: green">
                                 <h3>GitHub</h3>
                             </a>
-                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                            <p class="card-text">Project code and JavaScript practice pushed to a GitHub repository.</p>
                         </div>
 
                     </div>
