minor style changes

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
                                 <h3>Storefront</h3>
                             </a>
-                            <p class="card-text">Static mobile-responsive webpage designed with HTML, CSS, and Bootstrap.</p>
+                            <p class="card-text">Static mobile-responsive webpage designed with HTML, CSS and Bootstrap.</p>
                         </div>
 
                     </div>
