added medical app

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
     <title>Tracy's Portfolio</title>
 
+    <!-- Old Bootstrap core CSS Modules
+    <link href="./tools/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./tools/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./tools/font-awesome/css/font-awesome.min.css">
+    <link href="./tools/animate.css"> -->
+
+    
     <!-- Bootstrap core CSS Modules-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -30,22 +37,30 @@
 </head>
 
 <body>
-    <!-- Navbar -->
     <nav id="header" class="navbar navbar-fixed-top">
         <div id="header-container" class="container-fluid navbar-container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
             <div id="navbar" class="collapse navbar-collapse">
-                    <form class="form-inline">
-                        <a class="nav-item nav-link" href="#">Home</a>
-                        <a class="nav-item nav-link" href="#aboutMe">About Me</a>
-                        <a class="nav-item nav-link" href="#projects">Projects</a>
-                        <a class="nav-item nav-link" href="https://drive.google.com/file/d/1VQJoIpw70UZcPVETBhC6_Ij2L324ZVPH/view?usp=sharing" target="blank">Resume</a>
-                        <a class="nav-item nav-link" href="#contact">Contact Me</a>
-                    </form>      
+                <form class="form-inline">
+                    <a class="nav-item nav-link" href="#">Home</a>
+                    <a class="nav-item nav-link" href="#aboutMe">About Me</a>
+                    <a class="nav-item nav-link" href="#projects">Projects</a>
+                    <a class="nav-item nav-link" href="https://drive.google.com/file/d/1NomUaWZtGjO6B8hvytUepsDJJKA0_NCj/view?usp=sharing" target="blank">Resume</a>
+                    <a class="nav-item nav-link" href="#contact">Contact Me</a>
+                </form>
             </div>
             <!-- /.nav-collapse -->
         </div>
         <!-- /.container -->
     </nav>
+
     <!-- /.navbar -->
     <!-- Header -->
     <header>
@@ -105,7 +120,7 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">GitHub</a> library, or download my
-                    <a href="https://drive.google.com/file/d/1VQJoIpw70UZcPVETBhC6_Ij2L324ZVPH/view?usp=sharing" target="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/file/d/1NomUaWZtGjO6B8hvytUepsDJJKA0_NCj/view?usp=sharing" target="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
@@ -172,7 +187,8 @@
                             <a href="https://star-wars-api-project.firebaseapp.com" target="blank" style="color: green">
                                 <h3>API Project</h3>
                             </a>
-                            <p class="card-text">JavaScript app that fetches data from the Star Wars API (swapi.com) to display the opening scroll of each Star Wars movie. Styled with HTML and CSS.</p>
+                            <p class="card-text">JavaScript app that fetches data from the Star Wars API (swapi.com) to display the opening scroll
+                                of each Star Wars movie. Styled with HTML and CSS.</p>
                         </div>
 
                     </div>
@@ -188,7 +204,8 @@
                             <a href="https://tdesserich-healthtrackerclient.herokuapp.com/" target="blank" style="color: green">
                                 <h3>Medical Tracker</h3>
                             </a>
-                            <p class="card-text">Full stack application built using Node.js and React. Has full create, read, update and delete functionality. Mobile responsive. Styled with CSS and Reactstrap.</p>
+                            <p class="card-text">Full stack application built using Node.js and React. Has full create, read, update and delete
+                                functionality. Mobile responsive. Styled with CSS and Reactstrap.</p>
                         </div>
 
                     </div>
@@ -273,7 +290,7 @@
                 <div class="text-align-center">
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <a href="https://drive.google.com/file/d/1VQJoIpw70UZcPVETBhC6_Ij2L324ZVPH/view?usp=sharing" target="blank">
+                            <a href="https://drive.google.com/file/d/1NomUaWZtGjO6B8hvytUepsDJJKA0_NCj/view?usp=sharing" target="blank">
                                 <i class="fa fa-briefcase"></i>
                             </a>
                         </li>
@@ -291,12 +308,12 @@
                 </div>
             </div>
         </div>
-            <div class="row">
-                <div class="col-md-12 text-align-center">
-                    <p>© Copyright 2018 tdesserich</p>
-                </div>
+        <div class="row">
+            <div class="col-md-12 text-align-center">
+                <p>© Copyright 2018 tdesserich</p>
             </div>
-            
+        </div>
+
     </div>
     <!--/Footer-->
 
