--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Bootstrap core CSS Modules-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <!-- <link href="./tools/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="./tools/font-awesome/css/font-awesome.min.css">
     <link href="./tools/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="./tools/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -42,6 +43,8 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                     aria-controls="navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
