--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <div class="col-md-6 col-md-offset-2">
                 <br>
                 <p style="text-align:left">My career as a coder is just beginning with my education at
-                    <a href="https://www.elevenfifty.org/" target="blank" style="color: green">Eleven Fifty Academy</a>, where I am learning HTML, CSS/SCSS, Bootstrap, JavaScript, React, Node, Firebase,
-                    and Angular. However, my previous work experience and education have already set me up for success in
-                    this new venture. I have a Bachelor of Arts in Sociology from Indiana University and Master of Science
+                    <a href="https://www.elevenfifty.org/" target="blank" style="color: green">Eleven Fifty Academy</a>, where I have learned HTML, CSS/SCSS, Bootstrap, JavaScript, React, Node, Firebase,
+                    Angular and Agular Material. However, my previous work experience and education have already set me up for success in
+                    this new venture. I have a Bachelor of Arts from Indiana University and Master of Science
                     in Management from Indiana Wesleyan University, as well as a certificate in Nonprofit Management. I spent
                     15 years as a nonprofit director and fundraiser, where I developed expertise in project management, problem
                     solving, leadership, team building, research, organization, time management, communication, and writing.
@@ -200,9 +200,7 @@
                 <!-- Health Tracker -->
                 <div class="col-md-4 cardStyle">
                     <div class="card h-100 ">
-
                         <img class="card-img-top" img src="./assets/healthtracker.jpg" alt="Card image cap" />
-
                         <div class="card-body">
                             <a href="https://tdesserich-healthtrackerclient.herokuapp.com/" target="blank" style="color: green">
                                 <h3>Medical Tracker</h3>
@@ -210,15 +208,24 @@
                             <p class="card-text">Full stack application built using Node.js and React. Has full create, read, update and delete
                                 functionality. Mobile responsive. Styled with CSS and Reactstrap.</p>
                         </div>
-
+                    </div>
+                </div>
+                <!-- Todah -->
+                <div class="col-md-4 cardStyle">
+                    <div class="card h-100 ">
+                        <img class="card-img-top" img src="./assets/todah.jpg" alt="Card image cap" />
+                        <div class="card-body">
+                            <a href="https://todah-client.herokuapp.com/home" target="blank" style="color: green">
+                                <h3>Todah</h3>
+                            </a>
+                            <p class="card-text">Group project updating About and Profile sections of client's Todah Crowdfunding App using Angular and Angular Material.</p>
+                        </div>
                     </div>
                 </div>
                 <!-- JS Library -->
                 <div class="col-md-4 cardStyle">
                     <div class="card h-100 ">
-
                         <img class="card-img-top" img src="./assets/github.jpg" alt="Card image cap" />
-
                         <div class="card-body">
                             <a href="https://github.com/tdesserich" target="blank" style="color: green">
                                 <h3>GitHub</h3>
