--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                     <div class="card h-100 ">
                         <img class="card-img-top" img src="./assets/todah.jpg" alt="Card image cap" />
                         <div class="card-body">
-                            <a href="https://todah-client.herokuapp.com/home" target="blank" style="color: green">
+                            <a href="https://todah-client-spring2018.herokuapp.com/" target="blank" style="color: green">
                                 <h3>Todah</h3>
                             </a>
-                            <p class="card-text">Group project updating About and Profile sections of client's Todah Crowdfunding App using Angular and Angular Material.</p>
+                            <p class="card-text">Group project updating About and Profile sections of client's Todah Crowdfunding App using Node.js, Angular and Angular Material.</p>
                         </div>
                     </div>
                 </div>
