--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <a href="https://todah-client-spring2018.herokuapp.com/" target="blank" style="color: green">
                                 <h3>Todah</h3>
                             </a>
-                            <p class="card-text">Group project updating About and Profile sections of client's Todah Crowdfunding App using Node.js, Angular and Angular Material.</p>
+                            <p class="card-text">Group project updating About, Campaign and Profile sections of client's Todah Crowdfunding App using Node.js, Angular and Angular Material.</p>
                         </div>
                     </div>
                 </div>
